navleft initial compile ok

--- a/index.html
+++ b/index.html
@@ -6,15 +6,32 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>footer-set1</title>
+  <title>navleft-set1</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/index.bundle.css">
 </head>
 <body>
-  <!-- begin fset1-01 -->
-  <h6 class="item-id">fset1-01</h6>
-  <!-- end fset1-01 -->
+  <!-- begin navleft1-01 placeholder -->
+  <h6 class="item-id">navleft1-01</h6>
+  <div class="row">
+    <div class="col-sm-3">
+      <!-- begin navleft1-01 -->
+      <div class="row navleft1-01 col-sm-12">
+        <ul>
+          <li class="navleft1-01_title">Nav Title</li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+        </ul>
+      </div>
+      <!-- end navleft1-01 -->
+    </div>
+    <div class="col-sm-9">39</div>
+  </div>
+  <!-- end navleft1-01 placeholder -->
   <script src="index.bundle.js"></script>
 </body>
 </html>
