--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- begin navleft1-01 -->
       <div class="row navleft1-01 col-sm-12">
         <ul>
-          <li class="navleft1-01_title">Nav Title</li>
+          <li><h4>Nav Title</h4></li>
           <li><a href="">Link one</a></li>
           <li><a href="">Link one</a></li>
           <li><a href="">Link one</a></li>
