--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navleft1-01 -->
-      <div class="row navleft1-01 col-sm-12">
+      <nav class="row navleft1-01 col-sm-12">
         <ul>
           <li><h4>Nav Title</h4></li>
           <li><a href="">Link one</a></li>
@@ -26,7 +26,7 @@
           <li><a href="">Link one</a></li>
           <li><a href="">Link one</a></li>
         </ul>
-      </div>
+      </nav>
       <!-- end navleft1-01 -->
     </div>
     <div class="col-sm-9">39</div>
