placeholder for navleft1-02 added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
     <div class="col-sm-9">39</div>
   </div>
   <!-- end navleft1-01 placeholder -->
+  <!-- begin navleft1-02 placeholder -->
+  <h6 class="item-id">navleft1-02</h6>
+  <div class="row">
+    <div class="col-sm-3">
+      <!-- begin navleft1-02 -->
+      <nav class="row navleft1-02 col-sm-12">
+        <ul>
+          <li><h4>Nav Title</h4></li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+          <li><a href="">Link one</a></li>
+        </ul>
+      </nav>
+      <!-- end navleft1-02 -->
+    </div>
+    <div class="col-sm-9">39</div>
+  </div>
+  <!-- end navleft1-02 placeholder -->
   <script src="index.bundle.js"></script>
 </body>
 </html>
