navleft1-02 initial compile ok

--- a/index.html
+++ b/index.html
@@ -37,16 +37,27 @@
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navleft1-02 -->
-      <nav class="row navleft1-02 col-sm-12">
+      <div class="row navleft1-02 col-sm-12">
         <ul>
-          <li><h4>Nav Title</h4></li>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
+          <li class="navleft1-02_title">Nav Title</li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-02_img-holder">
+              <img src="" alt="">
+            </div>
+            <!--end img-holder-->
+            <a href="">link one</a>
+          </li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-02_img-holder">
+              <img src="" alt="">
+            </div>
+            <!--end img-holder-->
+            <a href="">link one</a>
+          </li>
         </ul>
-      </nav>
+      </div>
       <!-- end navleft1-02 -->
     </div>
     <div class="col-sm-9">39</div>
