--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navleft1-02 -->
-      <div class="row navleft1-02 col-sm-12">
+      <nav class="row navleft1-02 col-sm-12">
         <ul>
-          <li class="navleft1-02_title">Nav Title</li>
+          <li><h4>Nav Title</h4></li>
           <li>
             <!--begin img-holder -->
             <div class="navleft1-02_img-holder">
@@ -57,7 +57,7 @@
             <a href="">link one</a>
           </li>
         </ul>
-      </div>
+      </nav>
       <!-- end navleft1-02 -->
     </div>
     <div class="col-sm-9">39</div>
