--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
         <ul>
           <li><h4>Nav Title</h4></li>
           <li>
-            <!--begin img-holder -->
             <div class="navleft1-02_img-holder">
               <img src="" alt="">
             </div>
-            <!--end img-holder-->
             <a href="">link one</a>
           </li>
           <li>
-            <!--begin img-holder -->
             <div class="navleft1-02_img-holder">
               <img src="" alt="">
             </div>
-            <!--end img-holder-->
+            <a href="">link one</a>
+          </li>
+          <li>
+            <div class="navleft1-02_img-holder">
+              <img src="" alt="">
+            </div>
             <a href="">link one</a>
           </li>
         </ul>
