--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
     <div class="col-sm-9">39</div>
   </div>
   <!-- end navleft1-02 placeholder -->
+  <!-- begin navleft1-03 placeholder -->
+  <h6 class="item-id">navleft1-03</h6>
+  <div class="row">
+    <div class="col-sm-3">39</div>
+    <div class="col-sm-9">39</div>
+  </div>
+  <!-- end navleft1-03 placeholder -->
   <script src="index.bundle.js"></script>
 </body>
 </html>
