--- a/index.html
+++ b/index.html
@@ -68,7 +68,37 @@
   <!-- begin navleft1-03 placeholder -->
   <h6 class="item-id">navleft1-03</h6>
   <div class="row">
-    <div class="col-sm-3">39</div>
+    <div class="col-sm-3">
+      <!--begin navleft1-03-->
+      <div class="row navleft1-03 col-sm-12 col-md-12 col-lg-12 lrbg2">
+        <ul>
+          <li><h4>Nav Title</h4></li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-03_img-holder">
+              <img src="">
+            </div>
+            <!--end img-holder-->
+            <a href="">
+              <h4>Link one</h4>
+            </a>
+            <span>Link one description</span>
+          </li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-03_img-holder">
+              <img src="">
+            </div>
+            <!--end img-holder-->
+            <a href="">
+              <h4>Link one</h4>
+            </a>
+            <span>Link one description</span>
+          </li>
+        </ul>
+      </div>
+      <!--end navleft1-03-->
+    </div>
     <div class="col-sm-9">39</div>
   </div>
   <!-- end navleft1-03 placeholder -->
