navleft1-03 initial compile ok

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a href="">
               <h4>Link one</h4>
             </a>
-            <span>Link one description</span>
+            <p>Link one description</p>
           </li>
           <li>
             <!--begin img-holder -->
@@ -93,7 +93,7 @@
             <a href="">
               <h4>Link one</h4>
             </a>
-            <span>Link one description</span>
+            <p>Link one description</p>
           </li>
         </ul>
       </div>
