--- a/index.html
+++ b/index.html
@@ -70,33 +70,38 @@
   <div class="row">
     <div class="col-sm-3">
       <!--begin navleft1-03-->
-      <div class="row navleft1-03 col-sm-12 col-md-12 col-lg-12 lrbg2">
+      <nav class="row navleft1-03 col-sm-12">
         <ul>
           <li><h4>Nav Title</h4></li>
           <li>
-            <!--begin img-holder -->
             <div class="navleft1-03_img-holder">
               <img src="">
             </div>
-            <!--end img-holder-->
             <a href="">
               <h4>Link one</h4>
             </a>
             <p>Link one description</p>
           </li>
-          <li>
-            <!--begin img-holder -->
+          <li>            
             <div class="navleft1-03_img-holder">
               <img src="">
             </div>
-            <!--end img-holder-->
+            <a href="">
+              <h4>Link one</h4>
+            </a>
+            <p>Link one description</p>
+          </li>
+          <li>            
+            <div class="navleft1-03_img-holder">
+              <img src="">
+            </div>
             <a href="">
               <h4>Link one</h4>
             </a>
             <p>Link one description</p>
           </li>
         </ul>
-      </div>
+      </nav>
       <!--end navleft1-03-->
     </div>
     <div class="col-sm-9">39</div>
