--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </a>
             <p>Link one description</p>
           </li>
-          <li>            
+          <li>
             <div class="navleft1-03_img-holder">
               <img src="">
             </div>
@@ -91,7 +91,7 @@
             </a>
             <p>Link one description</p>
           </li>
-          <li>            
+          <li>
             <div class="navleft1-03_img-holder">
               <img src="">
             </div>
@@ -107,6 +107,13 @@
     <div class="col-sm-9">39</div>
   </div>
   <!-- end navleft1-03 placeholder -->
+  <!-- begin navleft1-04 placeholder -->
+  <h6 class="item-id">navleft1-04</h6>
+  <div class="row">
+    <div class="col-sm-3">39</div>
+    <div class="col-sm-9">39</div>
+  </div>
+  <!-- end navleft1-04 placeholder -->
   <script src="index.bundle.js"></script>
 </body>
 </html>
