before compiling leftnav1-04

--- a/index.html
+++ b/index.html
@@ -110,7 +110,47 @@
   <!-- begin navleft1-04 placeholder -->
   <h6 class="item-id">navleft1-04</h6>
   <div class="row">
-    <div class="col-sm-3">39</div>
+    <div class="col-sm-3">
+      <!--begin navleft1-04-->
+      <nav class="row navleft1-04 col-sm-12">
+        <ul>
+          <li><h4>Nav Title</h4></li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-04_img-holder">
+              <span class="fa fa-home fa-2x"></span>
+            </div>
+            <!--end img-holder-->
+            <a href="">link one</a>
+          </li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-04_img-holder">
+              <span class="fa fa-phone fa-2x"></span>
+            </div>
+            <!--end img-holder-->
+            <a href="">link one</a>
+          </li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-04_img-holder">
+              <span class="fa fa-home fa-2x"></span>
+            </div>
+            <!--end img-holder-->
+            <a href="">link one</a>
+          </li>
+          <li>
+            <!--begin img-holder -->
+            <div class="navleft1-04_img-holder">
+              <span class="fa fa-home fa-2x"></span>
+            </div>
+            <!--end img-holder-->
+            <a href="">link one</a>
+          </li>
+        </ul>
+      </nav>
+      <!--end navleft1-04-->
+    </div>
     <div class="col-sm-9">39</div>
   </div>
   <!-- end navleft1-04 placeholder -->
