nested headers in markup

--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="zxx"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>navleft-set1</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/index.bundle.css">
 </head>
 <body>
+  <h1>navleft-set1</h1>
   <!-- begin navleft1-01 placeholder -->
-  <h6 class="item-id">navleft1-01</h6>
+  <h2 class="item-id">navleft1-01</h2>
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navleft1-01 -->
       <nav class="row navleft1-01 col-sm-12">
         <ul>
-          <li><h4>Nav Title</h4></li>
+          <li>
+            <h3>Nav Title</h3>
+          </li>
           <li><a href="">Link one</a></li>
           <li><a href="">Link one</a></li>
           <li><a href="">Link one</a></li>
@@ -33,28 +36,30 @@
   </div>
   <!-- end navleft1-01 placeholder -->
   <!-- begin navleft1-02 placeholder -->
-  <h6 class="item-id">navleft1-02</h6>
+  <h2 class="item-id">navleft1-02</h2>
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navleft1-02 -->
       <nav class="row navleft1-02 col-sm-12">
         <ul>
-          <li><h4>Nav Title</h4></li>
+          <li>
+            <h3>Nav Title</h3>
+          </li>
           <li>
             <div class="navleft1-02_img-holder">
-              <img src="" alt="">
+              <img src="img.jpg" alt="img alt">
             </div>
             <a href="">link one</a>
           </li>
           <li>
             <div class="navleft1-02_img-holder">
-              <img src="" alt="">
+              <img src="img.jpg" alt="img alt">
             </div>
             <a href="">link one</a>
           </li>
           <li>
             <div class="navleft1-02_img-holder">
-              <img src="" alt="">
+              <img src="img.jpg" alt="img alt">
             </div>
             <a href="">link one</a>
           </li>
@@ -66,16 +71,18 @@
   </div>
   <!-- end navleft1-02 placeholder -->
   <!-- begin navleft1-03 placeholder -->
-  <h6 class="item-id">navleft1-03</h6>
+  <h2 class="item-id">navleft1-03</h2>
   <div class="row">
     <div class="col-sm-3">
       <!--begin navleft1-03-->
       <nav class="row navleft1-03 col-sm-12">
         <ul>
-          <li><h4>Nav Title</h4></li>
+          <li>
+            <h3>Nav Title</h3>
+          </li>
           <li>
             <div class="navleft1-03_img-holder">
-              <img src="">
+              <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
               <h4>Link one</h4>
@@ -84,7 +91,7 @@
           </li>
           <li>
             <div class="navleft1-03_img-holder">
-              <img src="">
+              <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
               <h4>Link one</h4>
@@ -93,7 +100,7 @@
           </li>
           <li>
             <div class="navleft1-03_img-holder">
-              <img src="">
+              <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
               <h4>Link one</h4>
@@ -108,13 +115,15 @@
   </div>
   <!-- end navleft1-03 placeholder -->
   <!-- begin navleft1-04 placeholder -->
-  <h6 class="item-id">navleft1-04</h6>
+  <h2 class="item-id">navleft1-04</h2>
   <div class="row">
     <div class="col-sm-3">
       <!--begin navleft1-04-->
       <nav class="row navleft1-04 col-sm-12">
         <ul>
-          <li><h4>Nav Title</h4></li>
+          <li>
+            <h3>Nav Title</h3>
+          </li>
           <li>
             <div class="navleft1-04_img-holder">
               <span class="fa fa-home fa-2x"></span>
