--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/index.bundle.css">
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
   <h1>navleft-set1</h1>
@@ -155,6 +159,5 @@
     <div class="col-sm-9">39</div>
   </div>
   <!-- end navleft1-04 placeholder -->
-  <script src="index.bundle.js"></script>
 </body>
 </html>
