--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 <body>
   <h1>navleft-set1</h1>
-  <!-- begin navleft1-01 placeholder -->
-  <h2 class="item-id">navleft1-01</h2>
+  <!-- begin navSide101 placeholder -->
+  <h2 class="item-id">navSide101</h2>
   <div class="row">
     <div class="col-sm-3">
-      <!-- begin navleft1-01 -->
-      <nav class="row navleft1-01 col-sm-12">
+      <!-- begin navSide101 -->
+      <nav class="row navSide101 col-sm-12">
         <ul>
           <li>
             <h3>Nav Title</h3>
@@ -34,58 +34,58 @@
           <li><a href="">Link one</a></li>
         </ul>
       </nav>
-      <!-- end navleft1-01 -->
+      <!-- end navSide101 -->
     </div>
     <div class="col-sm-9">39</div>
   </div>
-  <!-- end navleft1-01 placeholder -->
-  <!-- begin navleft1-02 placeholder -->
-  <h2 class="item-id">navleft1-02</h2>
+  <!-- end navSide101 placeholder -->
+  <!-- begin navSide102 placeholder -->
+  <h2 class="item-id">navSide102</h2>
   <div class="row">
     <div class="col-sm-3">
-      <!-- begin navleft1-02 -->
-      <nav class="row navleft1-02 col-sm-12">
+      <!-- begin navSide102 -->
+      <nav class="row navSide102 col-sm-12">
         <ul>
           <li>
             <h3>Nav Title</h3>
           </li>
           <li>
-            <div class="navleft1-02_img-holder">
+            <div class="navSide102_img-holder">
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">link one</a>
           </li>
           <li>
-            <div class="navleft1-02_img-holder">
+            <div class="navSide102_img-holder">
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">link one</a>
           </li>
           <li>
-            <div class="navleft1-02_img-holder">
+            <div class="navSide102_img-holder">
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">link one</a>
           </li>
         </ul>
       </nav>
-      <!-- end navleft1-02 -->
+      <!-- end navSide102 -->
     </div>
     <div class="col-sm-9">39</div>
   </div>
-  <!-- end navleft1-02 placeholder -->
-  <!-- begin navleft1-03 placeholder -->
-  <h2 class="item-id">navleft1-03</h2>
+  <!-- end navSide102 placeholder -->
+  <!-- begin navSide103 placeholder -->
+  <h2 class="item-id">navSide103</h2>
   <div class="row">
     <div class="col-sm-3">
-      <!--begin navleft1-03-->
-      <nav class="row navleft1-03 col-sm-12">
+      <!--begin navSide103-->
+      <nav class="row navSide103 col-sm-12">
         <ul>
           <li>
             <h3>Nav Title</h3>
           </li>
           <li>
-            <div class="navleft1-03_img-holder">
+            <div class="navSide103_img-holder">
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
@@ -94,7 +94,7 @@
             <p>Link one description</p>
           </li>
           <li>
-            <div class="navleft1-03_img-holder">
+            <div class="navSide103_img-holder">
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
@@ -103,7 +103,7 @@
             <p>Link one description</p>
           </li>
           <li>
-            <div class="navleft1-03_img-holder">
+            <div class="navSide103_img-holder">
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
@@ -113,51 +113,51 @@
           </li>
         </ul>
       </nav>
-      <!--end navleft1-03-->
+      <!--end navSide103-->
     </div>
     <div class="col-sm-9">39</div>
   </div>
-  <!-- end navleft1-03 placeholder -->
-  <!-- begin navleft1-04 placeholder -->
-  <h2 class="item-id">navleft1-04</h2>
+  <!-- end navSide103 placeholder -->
+  <!-- begin navSide104 placeholder -->
+  <h2 class="item-id">navSide104</h2>
   <div class="row">
     <div class="col-sm-3">
-      <!--begin navleft1-04-->
-      <nav class="row navleft1-04 col-sm-12">
+      <!--begin navSide104-->
+      <nav class="row navSide104 col-sm-12">
         <ul>
           <li>
             <h3>Nav Title</h3>
           </li>
           <li>
-            <div class="navleft1-04_img-holder">
+            <div class="navSide104_img-holder">
               <span class="fa fa-home fa-2x"></span>
             </div>
             <a href="">link one</a>
           </li>
           <li>
-            <div class="navleft1-04_img-holder">
+            <div class="navSide104_img-holder">
               <span class="fa fa-phone fa-2x"></span>
             </div>
             <a href="">link one</a>
           </li>
           <li>
-            <div class="navleft1-04_img-holder">
+            <div class="navSide104_img-holder">
               <span class="fa fa-home fa-2x"></span>
             </div>
             <a href="">link one</a>
           </li>
           <li>
-            <div class="navleft1-04_img-holder">
+            <div class="navSide104_img-holder">
               <span class="fa fa-home fa-2x"></span>
             </div>
             <a href="">link one</a>
           </li>
         </ul>
       </nav>
-      <!--end navleft1-04-->
+      <!--end navSide104-->
     </div>
     <div class="col-sm-9">39</div>
   </div>
-  <!-- end navleft1-04 placeholder -->
+  <!-- end navSide104 placeholder -->
 </body>
 </html>
