tweaked navSide102 markup

--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navSide101 -->
-      <nav class="row navSide101 col-sm-12">
+      <nav class="navSide101">
+        <h3 class="navSide101_heading">Nav Title</h3>
         <ul>
-          <li>
-            <h3>Nav Title</h3>
-          </li>
           <li><a href="">Link one</a></li>
           <li><a href="">Link one</a></li>
           <li><a href="">Link one</a></li>
@@ -44,11 +42,9 @@
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navSide102 -->
-      <nav class="row navSide102 col-sm-12">
+      <nav class="navSide102">
+        <h3 class="navSide102_heading">Nav Title</h3>
         <ul>
-          <li>
-            <h3>Nav Title</h3>
-          </li>
           <li>
             <div class="navSide102_img-holder">
               <img src="img.jpg" alt="img alt">
