tweaked navside103 markup

--- a/index.html
+++ b/index.html
@@ -75,17 +75,15 @@
   <div class="row">
     <div class="col-sm-3">
       <!--begin navSide103-->
-      <nav class="row navSide103 col-sm-12">
+      <nav class="navSide103">
+        <h3 class="navSide103_heading">Nav Title</h3>
         <ul>
           <li>
-            <h3>Nav Title</h3>
-          </li>
-          <li>
             <div class="navSide103_img-holder">
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
-              <h4>Link one</h4>
+              Link one
             </a>
             <p>Link one description</p>
           </li>
@@ -94,7 +92,7 @@
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
-              <h4>Link one</h4>
+              Link one
             </a>
             <p>Link one description</p>
           </li>
@@ -103,7 +101,7 @@
               <img src="img.jpg" alt="img alt">
             </div>
             <a href="">
-              <h4>Link one</h4>
+              Link one
             </a>
             <p>Link one description</p>
           </li>
