--- a/index.html
+++ b/index.html
@@ -124,25 +124,25 @@
           </li>
           <li>
             <div class="navSide104_img-holder">
-              <span class="fa fa-home fa-2x"></span>
+              <span>s</span>
             </div>
             <a href="">link one</a>
           </li>
           <li>
             <div class="navSide104_img-holder">
-              <span class="fa fa-phone fa-2x"></span>
+              <span>s</span>
             </div>
             <a href="">link one</a>
           </li>
           <li>
             <div class="navSide104_img-holder">
-              <span class="fa fa-home fa-2x"></span>
+              <span>s</span>
             </div>
             <a href="">link one</a>
           </li>
           <li>
             <div class="navSide104_img-holder">
-              <span class="fa fa-home fa-2x"></span>
+              <span>s</span>
             </div>
             <a href="">link one</a>
           </li>
