added navSide104 theme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>navleft-set1</title>
+  <title>navSide1</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/index.bundle.css">
@@ -117,11 +117,9 @@
   <div class="row">
     <div class="col-sm-3">
       <!--begin navSide104-->
-      <nav class="row navSide104 col-sm-12">
+      <nav class="navSide104">
+        <h3 class="navSide104_heading">Nav Title</h3>
         <ul>
-          <li>
-            <h3>Nav Title</h3>
-          </li>
           <li>
             <div class="navSide104_img-holder">
               <span>s</span>
