--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navSide101 -->
-      <nav class="navSide101">
+      <nav class="navSide101" role="navigation">
         <h3 class="navSide101_heading">Nav Title</h3>
         <ul>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
-          <li><a href="">Link one</a></li>
+          <li><a href="" tabindex="0" aria-setsize="5" aria-posinset="1">Link one</a></li>
+          <li><a href="" tabindex="0" aria-setsize="5" aria-posinset="2">Link one</a></li>
+          <li><a href="" tabindex="0" aria-setsize="5" aria-posinset="3">Link one</a></li>
+          <li><a href="" tabindex="0" aria-setsize="5" aria-posinset="4">Link one</a></li>
+          <li><a href="" tabindex="0" aria-setsize="5" aria-posinset="5">Link one</a></li>
         </ul>
       </nav>
       <!-- end navSide101 -->
@@ -42,26 +42,26 @@
   <div class="row">
     <div class="col-sm-3">
       <!-- begin navSide102 -->
-      <nav class="navSide102">
+      <nav class="navSide102" role="navigation">
         <h3 class="navSide102_heading">Nav Title</h3>
         <ul>
           <li>
             <div class="navSide102_img-holder">
-              <img src="img.jpg" alt="img alt">
+              <img src="img.jpg" alt="img alt" title="img title">
             </div>
-            <a href="">link one</a>
+            <a href="" tabindex="0" aria-setsize="3" aria-posinset="1">link one</a>
           </li>
           <li>
             <div class="navSide102_img-holder">
-              <img src="img.jpg" alt="img alt">
+              <img src="img.jpg" alt="img alt" title="img title">
             </div>
-            <a href="">link one</a>
+            <a href="" tabindex="0" aria-setsize="3" aria-posinset="2">link one</a>
           </li>
           <li>
             <div class="navSide102_img-holder">
-              <img src="img.jpg" alt="img alt">
+              <img src="img.jpg" alt="img alt" title="img title">
             </div>
-            <a href="">link one</a>
+            <a href="" tabindex="0" aria-setsize="3" aria-posinset="3">link one</a>
           </li>
         </ul>
       </nav>
@@ -75,32 +75,32 @@
   <div class="row">
     <div class="col-sm-3">
       <!--begin navSide103-->
-      <nav class="navSide103">
+      <nav class="navSide103" role="navigation">
         <h3 class="navSide103_heading">Nav Title</h3>
         <ul>
           <li>
             <div class="navSide103_img-holder">
-              <img src="img.jpg" alt="img alt">
+              <img src="img.jpg" alt="img alt" title="img title">
             </div>
-            <a href="">
+            <a href="" tabindex="0" aria-setsize="3" aria-posinset="1">
               Link one
             </a>
             <p>Link one description</p>
           </li>
           <li>
             <div class="navSide103_img-holder">
-              <img src="img.jpg" alt="img alt">
+              <img src="img.jpg" alt="img alt" title="img title">
             </div>
-            <a href="">
+            <a href="" tabindex="0" aria-setsize="3" aria-posinset="2">
               Link one
             </a>
             <p>Link one description</p>
           </li>
           <li>
             <div class="navSide103_img-holder">
-              <img src="img.jpg" alt="img alt">
+              <img src="img.jpg" alt="img alt" title="img title">
             </div>
-            <a href="">
+            <a href="" tabindex="0" aria-setsize="3" aria-posinset="3">
               Link one
             </a>
             <p>Link one description</p>
@@ -117,32 +117,32 @@
   <div class="row">
     <div class="col-sm-3">
       <!--begin navSide104-->
-      <nav class="navSide104">
+      <nav class="navSide104" role="navigation">
         <h3 class="navSide104_heading">Nav Title</h3>
         <ul>
           <li>
             <div class="navSide104_img-holder">
               <span>s</span>
             </div>
-            <a href="">link one</a>
+            <a href="" tabindex="0" aria-setsize="4" aria-posinset="1">link one</a>
           </li>
           <li>
             <div class="navSide104_img-holder">
               <span>s</span>
             </div>
-            <a href="">link one</a>
+            <a href="" tabindex="0" aria-setsize="4" aria-posinset="2">link one</a>
           </li>
           <li>
             <div class="navSide104_img-holder">
               <span>s</span>
             </div>
-            <a href="">link one</a>
+            <a href="" tabindex="0" aria-setsize="4" aria-posinset="3">link one</a>
           </li>
           <li>
             <div class="navSide104_img-holder">
               <span>s</span>
             </div>
-            <a href="">link one</a>
+            <a href="" tabindex="0" aria-setsize="4" aria-posinset="4">link one</a>
           </li>
         </ul>
       </nav>
